# ChangeLog for net-wireless/ipw2100
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-wireless/ipw2100/Attic/ChangeLog,v 1.47 2004/11/08 23:05:11 brix Exp $

*ipw2100-0.61 (09 Nov 2004)

  09 Nov 2004; Henrik Brix Andersen <brix@gentoo.org> +ipw2100-0.61.ebuild:
  Version bump.

  08 Nov 2004; Henrik Brix Andersen <brix@gentoo.org> ipw2100-0.56-r1.ebuild,
  -ipw2100-0.56.ebuild:
  Updated kernel 2.4.x patch, cleaned out non-functional version 0.56.

*ipw2100-0.60 (05 Nov 2004)

  05 Nov 2004; Henrik Brix Andersen <brix@gentoo.org> +ipw2100-0.60.ebuild:
  Version bump.

  04 Nov 2004; Henrik Brix Andersen <brix@gentoo.org> -files/hostap_crypt.h,
  -files/ipw2100-0.55-modparam-perm.patch,
  -files/ipw2100-0.55_manual-disable.patch, -ipw2100-0.44.ebuild,
  -ipw2100-0.55-r1.ebuild, -ipw2100-0.55-r2.ebuild, -ipw2100-0.55.ebuild:
  Cleaned out old versions.

  04 Nov 2004; Henrik Brix Andersen <brix@gentoo.org> ipw2100-0.56-r1.ebuild:
  Updated patch for kernel 2.4, use pkg_setup() for checking required kernel
  options.

*ipw2100-0.59 (04 Nov 2004)

  04 Nov 2004; Henrik Brix Andersen <brix@gentoo.org> +ipw2100-0.59.ebuild:
  Version bump.

*ipw2100-0.58 (03 Nov 2004)

  03 Nov 2004; Henrik Brix Andersen <brix@gentoo.org> +ipw2100-0.58.ebuild:
  Version bump.

*ipw2100-0.57 (02 Nov 2004)

  02 Nov 2004; Henrik Brix Andersen <brix@gentoo.org> +ipw2100-0.57.ebuild:
  Version bump.

  29 Oct 2004; Henrik Brix Andersen <brix@gentoo.org>
  +files/ipw2100-0.56-2.6.10-susp.patch, ipw2100-0.56-r1.ebuild:
  Added patch for compiling against kernel 2.6.10-rc1, updated patch for kernel
  2.4.

  24 Oct 2004; Henrik Brix Andersen <brix@gentoo.org> ipw2100-0.56-r1.ebuild:
  Test all needed kernel options before bailing out. Thanks to Rudi Lippert
  <gentoo at lyrikpage dot de> in bug #68591.

  21 Oct 2004; Henrik Brix Andersen <brix@gentoo.org> ipw2100-0.56-r1.ebuild,
  ipw2100-0.56.ebuild: