@@ -4,6 +4,7 @@ MD5 ed6da81014c34267a8374e46f567a022 ipw2100-0.59.ebuild 3817
 MD5 c4a97eb25e8d493065e9168268ddb856 ipw2100-0.54.ebuild 2772
 MD5 a7551dca10e0976ba202483e1ac15333 ipw2100-0.60.ebuild 3817
 MD5 2eccf425c213e4b8fd51407397128e58 ipw2100-0.56-r1.ebuild 3997
+MD5 c13294ea91e4c2e4523f008cdd8a5184 ipw2100-0.62.ebuild 3817
 MD5 c98f3cde3235a2e9e022f3205c8952f4 ipw2100-0.58.ebuild 3817
 MD5 7d8c622ff9c6642ae649717462f4bf33 ChangeLog 9588
 MD5 8a68b74057e911e6804f77dc21959e80 metadata.xml 282
@@ -16,4 +17,5 @@ MD5 8928c2c9c01fd33dc6af010e74190332 files/digest-ipw2100-0.58 124
 MD5 3e6d6af3cead7c15b2c76688e3a38c17 files/digest-ipw2100-0.59 124
 MD5 005566287ad835c4fcf048ae0323e666 files/digest-ipw2100-0.60 124
 MD5 666b095d75733cc3f500fab1ead809db files/digest-ipw2100-0.61 124
+MD5 15d288b255c981826103ca199bc74738 files/digest-ipw2100-0.62 124
 MD5 aca6bf1c2d71e72adfc952d903c77f6b files/ipw2100-0.56-ieee80211_scan_age.2.patch 1718
