@@ -1,0 +1,2 @@
+MD5 afbf4449097e0c80f4ce822e70007b0c ipw2100-0.62.tgz 135757
+MD5 46aa75bcda1a00efa841f9707bbbd113 ipw2100-fw-1.3.tgz 248471
