@@ -1,6 +1,11 @@
 # ChangeLog for net-wireless/ipw2100
 # Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/ipw2100/Attic/ChangeLog,v 1.47 2004/11/08 23:05:11 brix Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/ipw2100/Attic/ChangeLog,v 1.48 2004/11/11 22:12:36 brix Exp $
+
+*ipw2100-0.62 (11 Nov 2004)
+
+  11 Nov 2004; Henrik Brix Andersen <brix@gentoo.org> +ipw2100-0.62.ebuild:
+  Version bump.
 
 *ipw2100-0.61 (09 Nov 2004)
 
